Use object-fit: contain to stop images stretching

--- a/src/widgets/card/Card.m.css
+++ b/src/widgets/card/Card.m.css
@@ -12,6 +12,7 @@
 	max-height: 175px;
 	width: 100%;
 	height: 100%;
+	object-fit: contain;
 }
 
 @media only screen and (max-width: 480px) {
